--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="item text3"> 
                 <h3>موضع
                 </h3>
-                <p>نوکھر
+                <p>ہردوڈیوڑھی 
                 </p>
             </div>
             <div class="item text4">
